--- a/res/values/strings_not_for_translation.xml
+++ b/res/values/strings_not_for_translation.xml
@@ -45,8 +45,23 @@
         <item>Androidicons www.androidicons.com</item>
     </string-array>
     
-	<!-- ***************************
-	     Preferences
+    <!-- ***************************
+	     Distribution
 	     *************************** -->
+	<!-- Update -->
+	<string name="oi_distribution_update_checker_package">org.openintents.updatechecker</string>
+    <string name="oi_distribution_update_checker_website">http://www.openintents.org/en/node/203</string><!-- 203 = OI Update -->
+	
+	<!-- About -->
+    <string name="oi_distribution_aboutapp_package">org.openintents.about</string>
+    <string name="oi_distribution_aboutapp_website">http://www.openintents.org/en/node/202</string><!-- 202 = OI About -->
+	
+    <!-- File Manager -->
+    <string name="oi_distribution_filemanager_package">org.openintents.filemanager</string>
+    <string name="oi_distribution_filemanager_website">http://www.openintents.org/en/filemanager</string>
+	
+	<!-- Safe -->
+    <string name="oi_distribution_safe_package">org.openintents.safe</string>
+    <string name="oi_distribution_safe_website">http://www.openintents.org/en/safe</string>
 	
 </resources> 
